# fastapi-boilerplate

./: .dockerignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
src/app/: __init__.py
src/app/user/: routes.py  schema.py  service.py
src/app/user/service/: user.py
src/core/artifacts/constants/: __init__.py  default.py
src/core/artifacts/decorator/: __init__.py  db.py
src/core/artifacts/interface/: repository.py  service.py
src/core/artifacts/typed/: __init__.py
src/core/config/: db.py  logging.py
src/core/lib/: auth.py
src/core/middleware/: __init__.py
src/db/alembic/: env.py
src/db/alembic/versions/: .gitignore
src/db/models/: base.py  user.py
src/db/repository/: user.py
